# Systeme_io_whatsapp_automatisation

./: CAHIER-DES-CHARGES-V2.md  CLAUDE.md  HANDOVER.md  README.md  cahier-des-charges-whatsapp-fba.docx
platform/: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
platform/alembic/: env.py
platform/alembic/versions/: 001_initial_schema.py  002_contact_scores_inbound.py  003_challenge_editions.py  004_challenge_edition_day_urls.py  005_message_provider_tracking.py  006_edition_resource_links.py  007_contact_email.py  008_learned_kb_rules.py  009_testimonials_url.py  010_audit_events_unique_aggregate_id.py  011_closer_wati_email.py
platform/apps/admin-console/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
platform/docs/: CAHIER-DES-CHARGES-V2.docx  bot-guardrails-system.md  generate-templates-doc-v2.js  generate-templates-doc.js  generate_cahier_docx.py  messages-challenge-amazon-fba-v2.docx  messages-challenge-amazon-fba.docx
platform/docs/bot-guardrails-questionnaire/: QUESTIONNAIRE-CADRAGE-BOT-WHATSAPP.docx  QUESTIONNAIRE-CADRAGE-BOT-WHATSAPP.md  generate_questionnaire_bot_docx.py
platform/docs/client-handoff/: DOC-FINALISATION-CHALLENGE-AMAZON-FBA -.docx  HANDOFF-CLIENT-CHALLENGE-AMAZON-FBA.docx  HANDOFF-CLIENT-CHALLENGE-AMAZON-FBA.md  MANUEL-UTILISATION-COMPLET-CHALLENGE-AMAZON-FBA.docx  generate_complete_user_manual_docx.py  (+1 more)
platform/scripts/: recover_wati_conversations.py
platform/tests/: conftest.py
(+166 files in other folders)
