[project]
name = "whatsapp-engagement-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "alembic",
  "psycopg[binary]",
  "redis",
  "celery",
  "pydantic-settings",
  "httpx",
  "python-multipart"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "services*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
